// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subroutine-statement basic ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "left": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 2,
            "offset": 28,
          },
          "start": Object {
            "column": 7,
            "line": 2,
            "offset": 21,
          },
        },
        "name": "vaceline",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 2,
          "offset": 37,
        },
        "start": Object {
          "column": 3,
          "line": 2,
          "offset": 17,
        },
      },
      "operator": "=",
      "right": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 22,
            "line": 2,
            "offset": 36,
          },
          "start": Object {
            "column": 18,
            "line": 2,
            "offset": 32,
          },
        },
        "trailingComments": Array [],
        "type": "StringLiteral",
        "value": "\\"aaa\\"",
      },
      "trailingComments": Array [],
      "type": "SetStatement",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "left": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 3,
            "offset": 52,
          },
          "start": Object {
            "column": 7,
            "line": 3,
            "offset": 45,
          },
        },
        "name": "vaceline",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 3,
          "offset": 61,
        },
        "start": Object {
          "column": 3,
          "line": 3,
          "offset": 41,
        },
      },
      "operator": "=",
      "right": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 22,
            "line": 3,
            "offset": 60,
          },
          "start": Object {
            "column": 18,
            "line": 3,
            "offset": 56,
          },
        },
        "trailingComments": Array [],
        "type": "StringLiteral",
        "value": "\\"bbb\\"",
      },
      "trailingComments": Array [],
      "type": "SetStatement",
    },
  ],
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "name": "vcl_recv",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 4,
      "offset": 63,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "SubroutineStatement",
}
`;

exports[`subroutine-statement basic format: format long 1`] = `
sub vcl_recv {set vaceline = "aaa";
  set vaceline = "bbb";
}
`;

exports[`subroutine-statement basic format: format short 1`] = `
sub vcl_recv {set vaceline =
    "aaa";
  set vaceline =
    "bbb";
}
`;

exports[`subroutine-statement basic token 1`] = `
Array [
  sub,
  vcl_recv,
  {,
  set,
  vaceline,
  =,
  "aaa",
  ;,
  set,
  vaceline,
  =,
  "bbb",
  ;,
  },
]
`;

exports[`subroutine-statement with_empty_lines ast: ast 1`] = `
Object {
  "body": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "left": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 2,
            "offset": 28,
          },
          "start": Object {
            "column": 7,
            "line": 2,
            "offset": 21,
          },
        },
        "name": "vaceline",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 2,
          "offset": 37,
        },
        "start": Object {
          "column": 3,
          "line": 2,
          "offset": 17,
        },
      },
      "operator": "=",
      "right": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 22,
            "line": 2,
            "offset": 36,
          },
          "start": Object {
            "column": 18,
            "line": 2,
            "offset": 32,
          },
        },
        "trailingComments": Array [],
        "type": "StringLiteral",
        "value": "\\"aaa\\"",
      },
      "trailingComments": Array [],
      "type": "SetStatement",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "left": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 5,
            "offset": 54,
          },
          "start": Object {
            "column": 7,
            "line": 5,
            "offset": 47,
          },
        },
        "name": "vaceline",
        "trailingComments": Array [],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 5,
          "offset": 63,
        },
        "start": Object {
          "column": 3,
          "line": 5,
          "offset": 43,
        },
      },
      "operator": "=",
      "right": Object {
        "innerComments": Array [],
        "leadingComments": Array [],
        "loc": Object {
          "end": Object {
            "column": 22,
            "line": 5,
            "offset": 62,
          },
          "start": Object {
            "column": 18,
            "line": 5,
            "offset": 58,
          },
        },
        "trailingComments": Array [],
        "type": "StringLiteral",
        "value": "\\"bbb\\"",
      },
      "trailingComments": Array [],
      "type": "SetStatement",
    },
  ],
  "id": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "name": "vcl_recv",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 8,
      "offset": 67,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "SubroutineStatement",
}
`;

exports[`subroutine-statement with_empty_lines format: format long 1`] = `
sub vcl_recv {set vaceline = "aaa";


  set vaceline = "bbb";
}
`;

exports[`subroutine-statement with_empty_lines format: format short 1`] = `
sub vcl_recv {set vaceline =
    "aaa";


  set vaceline =
    "bbb";
}
`;

exports[`subroutine-statement with_empty_lines token 1`] = `
Array [
  sub,
  vcl_recv,
  {,
  set,
  vaceline,
  =,
  "aaa",
  ;,
  set,
  vaceline,
  =,
  "bbb",
  ;,
  },
]
`;
